--- a/crates/page/Cargo.toml
+++ b/crates/page/Cargo.toml
@@ -4,5 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-web-component = { version = "0.1.11", features = ["web"] }
+
 dioxus = { version = "0.7.2", features = ["web", "router"] }
+wgpu = { version = "0.19", default-features = false, features = ["webgl", "wgsl"]}
+bytemuck = "1.16"
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = [
+    "Document",
+    "Window",
+    "Element",
+    "HtmlCanvasElement",
+    "Performance"
+]}
