--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,6 @@
 [workspace]
 resolver = "2"
-members = [
-    "crates/*"
-]
+members = ["crates/*"]
 
 [workspace.package]
 version = "0.1.0"
@@ -27,4 +25,5 @@ web-sys = { version = "0.3", features = [
     "Element",
     "HtmlCanvasElement",
     "Performance",
+    "console",
 ] }
